# pcre

./: .gitignore  132html  AUTHORS  CMakeLists.txt  COPYING  ChangeLog  HACKING  LICENCE  Makefile  Makefile.am  Makefile.in  NEWS  NON-AUTOTOOLS-BUILD  NON-UNIX-USE  PrepareRelease  README  RunGrepTest  RunGrepTest.in  RunTest  RunTest.bat  RunTest.in  Tech.Notes  autogen.sh  config-cmake.h.in  config.h.in  config.in  configure  configure.ac  configure.in  deftables.c  dftables.c  internal.h  libpcre16.pc.in  libpcreposix.pc.in  maketables.c  makevp.bat  pcre-config.in  pcre.3  pcre.3.html  pcre.3.txt  (+69 more)
doc/: index.html.src  pcre-config.1  pcre.3  pcre.html  pcre.txt  pcre16.3  pcre32.3  pcre_assign_jit_stack.3  pcre_compile.3  pcre_compile2.3  pcre_config.3  pcre_dfa_exec.3  pcre_exec.3  pcre_free_study.3  pcre_fullinfo.3  pcre_jit_exec.3  pcre_jit_stack_alloc.3  pcre_jit_stack_free.3  pcre_pattern_to_host_byte_order.3  pcre_refcount.3  pcre_study.3  pcre_utf16_to_host_byte_order.3  pcreapi.3  pcrebuild.3  pcrecallout.3  pcrecompat.3  pcrecpp.3  pcredemo.3  pcregrep.1  pcregrep.html  pcregrep.txt  pcrejit.3  pcrelimits.3  pcrematching.3  pcrepartial.3  pcrepattern.3  pcreperform.3  pcreposix.3  pcreprecompile.3  pcresample.3  (+6 more)
doc/html/: index.html  pcre-config.html  pcre.html  pcre16.html  pcre32.html  pcre_assign_jit_stack.html  pcre_compile.html  pcre_compile2.html  pcre_config.html  pcre_copy_named_substring.html  pcre_copy_substring.html  pcre_dfa_exec.html  pcre_exec.html  pcre_free_substring.html  pcre_free_substring_list.html  pcre_fullinfo.html  pcre_get_named_substring.html  pcre_get_stringnumber.html  pcre_get_stringtable_entries.html  pcre_get_substring.html  pcre_get_substring_list.html  pcre_info.html  pcre_jit_exec.html  pcre_jit_stack_alloc.html  pcre_maketables.html  pcre_pattern_to_host_byte_order.html  pcre_refcount.html  pcre_study.html  pcre_utf16_to_host_byte_order.html  pcre_version.html  pcreapi.html  pcrebuild.html  pcrecallout.html  pcrecompat.html  pcrecpp.html  pcredemo.html  pcregrep.html  pcrejit.html  pcrelimits.html  pcrematching.html  (+10 more)
maint/: Builducptable  GenerateUtt.py  ManyConfigTests  MultiStage2.py  README  ucptest.c  utf8.c
maint/ucptestdata/: testinput1  testoutput1
maintain/: 132html  Builducptable  Detrail  MakeRelease  README  ucptest.c  utf8.c
maintain/ucptestdata/: testinput1
testdata/: grepoutput  grepoutputN  saved16BE-1  saved16BE-2  saved16LE-1  saved16LE-2  saved32BE-1  saved32BE-2  saved32LE-1  saved32LE-2  testinput1  testinput10  testinput11  testinput12  testinput13  testinput14  testinput15  testinput17  testinput18  testinput2  testinput20  testinput23  testinput24  testinput25  testinput26  testinput4  testinput5  testinput6  testinput7  testinput8  testinput9  testoutput1  testoutput10  testoutput11  testoutput11-16  testoutput11-32  testoutput11-8  testoutput12  testoutput13  testoutput14  (+22 more)
