dnl Process this file with autoconf to produce a configure script.

dnl This is required at the start; the name is the name of a file
dnl it should be seeing, to verify it is in the same directory.

AC_INIT(dftables.c)

dnl Checks for programs.
AC_PROG_CC
AC_PROG_RANLIB

dnl Checks for header files.
AC_HEADER_STDC
AC_CHECK_HEADERS(limits.h)

dnl Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST
AC_TYPE_SIZE_T

dnl Checks for library functions.
AC_CHECK_FUNCS(memmove strerror)

dnl Arrange to build config.h from config.in
AC_CONFIG_HEADER(config.h:config.in)

dnl Handle --enable-shared-libraries
LIBTOOL=
LIBSUFFIX=a
AC_ARG_ENABLE(shared,
[  --enable-shared         build PCRE as a shared library (using libtool)],
if test "$enableval" = "yes"; then
  LIBTOOL=libtool
  LIBSUFFIX=la
fi
)
AC_SUBST(LIBTOOL)
AC_SUBST(LIBSUFFIX)

dnl This must be last; it determines what files are written
AC_OUTPUT(Makefile)
